--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@types/node": "^16.6.1",
+    "typescript": "^4.3.5",
     "vuepress": "^2.0.0-beta.23"
   }
 }
